--- a/members/templates/Channel/userchannel.html
+++ b/members/templates/Channel/userchannel.html
@@ -403,7 +403,7 @@ $(document).ready(function() {
                          <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                            <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none; color: #000000;"> <p style="margin: 0;">@{{ project.user.username }}</p></a>
                                <div style="display: flex; flex-direction: row; gap: 2vw;">
-                             <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.amount}} </p>
+                             <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.donation_amount}} </p>
                              <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">   Creator Contribution         </p>
                                 </div>
                          </div>
@@ -419,7 +419,7 @@ $(document).ready(function() {
                          <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                    <a href="{% url 'user_channel' username=highest_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ highest_donation.donor.username }}</p></a>        
                               <div style="display: flex; flex-direction: row; gap: 2vw;">
-                                <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                                <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                                 <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                               </div>
                          </div>
@@ -435,7 +435,7 @@ $(document).ready(function() {
                          <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                            <a href="{% url 'user_channel' username=most_recent_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ most_recent_donation.donor.username }}</p></a>
                              <div style="display: flex; flex-direction: row; gap: 1vw;">
-                             <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                             <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                              <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">  Most Recent  </p>
                              </div>
                          </div>
@@ -507,7 +507,7 @@ $(document).ready(function() {
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                           <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none; color: #000000;"> <p style="margin: 0;">@{{ project.user.username }}</p></a>
                               <div style="display: flex; flex-direction: row; gap: 2vw;">
-                            <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.amount}} </p>
+                            <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.donation_amount}} </p>
                             <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">   Creator Contribution         </p>
                                </div>
                         </div>
@@ -523,7 +523,7 @@ $(document).ready(function() {
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                   <a href="{% url 'user_channel' username=highest_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ highest_donation.donor.username }}</p></a>        
                              <div style="display: flex; flex-direction: row; gap: 2vw;">
-                               <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                               <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                                <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                              </div>
                         </div>
@@ -539,7 +539,7 @@ $(document).ready(function() {
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                           <a href="{% url 'user_channel' username=most_recent_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ most_recent_donation.donor.username }}</p></a>
                             <div style="display: flex; flex-direction: row; gap: 1vw;">
-                            <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                            <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                             <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">  Most Recent  </p>
                             </div>
                         </div>
@@ -596,7 +596,7 @@ $(document).ready(function() {
                 <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                   <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none; color: #000000;"> <p style="margin: 0;">@{{ project.user.username }}</p></a>
                       <div style="display: flex; flex-direction: row; gap: 2vw;">
-                    <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.amount}} </p>
+                    <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.donation_amount}} </p>
                     <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">   Creator Contribution         </p>
                        </div>
                 </div>
@@ -613,7 +613,7 @@ $(document).ready(function() {
                 <div style="display: flex; flex-direction: column; gap: 1.5vh;">
           <a href="{% url 'user_channel' username=highest_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ highest_donation.donor.username }}</p></a>        
                      <div style="display: flex; flex-direction: row; gap: 2vw;">
-                       <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                       <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                        <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                      </div>
                 </div>
@@ -624,7 +624,7 @@ $(document).ready(function() {
               <div style="display: flex; flex-direction: column; gap: 1.5vh;">
               <p style="margin: 0;">{{ highest_donation.name }}</p>       
                            <div style="display: flex; flex-direction: row; gap: 2vw;">
-                             <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                             <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                              <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                            </div>
                       </div>
@@ -644,7 +644,7 @@ $(document).ready(function() {
               <div style="display: flex; flex-direction: column; gap: 1.5vh;">
         <a href="{% url 'user_channel' username=most_recent_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ most_recent_donation.donor.username }}</p></a>        
                    <div style="display: flex; flex-direction: row; gap: 1vw;">
-                     <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                     <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                      <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Most Recent     </p>
                   
                     </div>
@@ -656,7 +656,7 @@ $(document).ready(function() {
             <div style="display: flex; flex-direction: column; gap: 1.5vh;">
               <p style="margin: 0;">{{ most_recent_donation.name }}</p>        
                          <div style="display: flex; flex-direction: row; gap: 1vw;">
-                           <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                           <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                            <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Most Recent     </p>
                         
                           </div>
@@ -873,7 +873,7 @@ $(document).ready(function() {
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                           <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none; color: #000000;"> <p style="margin: 0;">@{{ project.user.username }}</p></a>
                               <div style="display: flex; flex-direction: row; gap: 2vw;">
-                            <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.amount}} </p>
+                            <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.donation_amount}} </p>
                             <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">   Creator Contribution         </p>
                                </div>
                         </div>
@@ -890,7 +890,7 @@ $(document).ready(function() {
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                   <a href="{% url 'user_channel' username=highest_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ highest_donation.donor.username }}</p></a>        
                              <div style="display: flex; flex-direction: row; gap: 2vw;">
-                               <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                               <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                                <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                              </div>
                         </div>
@@ -901,7 +901,7 @@ $(document).ready(function() {
                     <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                     <p style="margin: 0;">{{ highest_donation.name }}</p>     
                                  <div style="display: flex; flex-direction: row; gap: 2vw;">
-                                   <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                                   <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                                    <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                                  </div>
                             </div>
@@ -920,7 +920,7 @@ $(document).ready(function() {
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                           <a href="{% url 'user_channel' username=most_recent_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ most_recent_donation.donor.username }}</p></a>
                             <div style="display: flex; flex-direction: row; gap: 1vw;">
-                            <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                            <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                             <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">  Most Recent  </p>
                             </div>
                         </div>
@@ -931,7 +931,7 @@ $(document).ready(function() {
                       <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                        <p style="margin: 0;">{{ most_recent_donation.name }}</p>
                           <div style="display: flex; flex-direction: row; gap: 1vw;">
-                          <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                          <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                           <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">  Most Recent  </p>
                           </div>
                       </div>
