--- a/members/templates/donation/history.html
+++ b/members/templates/donation/history.html
@@ -171,7 +171,7 @@
           </div>
             <div style="display: flex; flex-direction: row; justify-content: space-between;">
                     <p class="fg" style="margin-top: 10px;">${{ donation.project.total_donations }} raised </p>
-                    <p class="fg" style="margin-top: 10px;"> You donated ${{donation.amount}}</p>
+                    <p class="fg" style="margin-top: 10px;"> You donated ${{donation.donation_amount}}</p>
                 </div>
             <div style="display: flex; flex-direction: row; justify-content: space-between;">
 
