--- a/members/templates/projects/update_detail.html
+++ b/members/templates/projects/update_detail.html
@@ -197,7 +197,7 @@
                             <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                               <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none; color: #000000;"> <p style="margin: 0;">@{{ project.user.username }}</p></a>
                                   <div style="display: flex; flex-direction: row; gap: 2vw;">
-                                <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.amount}} </p>
+                                <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.donation_amount}} </p>
                                 <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">   Creator Contribution         </p>
                                    </div>
                             </div>
@@ -214,7 +214,7 @@
                             <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                       <a href="{% url 'user_channel' username=highest_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ highest_donation.donor.username }}</p></a>        
                                  <div style="display: flex; flex-direction: row; gap: 2vw;">
-                                   <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                                   <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                                    <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                                  </div>
                             </div>
@@ -225,7 +225,7 @@
                           <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                           <p style="margin: 0;">{{ highest_donation.name }}</p>       
                                        <div style="display: flex; flex-direction: row; gap: 2vw;">
-                                         <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                                         <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                                          <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                                        </div>
                                   </div>
@@ -245,7 +245,7 @@
                           <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                     <a href="{% url 'user_channel' username=most_recent_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ most_recent_donation.donor.username }}</p></a>        
                                <div style="display: flex; flex-direction: row; gap: 1vw;">
-                                 <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                                 <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                                  <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Most Recent     </p>
                               
                                 </div>
@@ -257,7 +257,7 @@
                         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
                           <p style="margin: 0;">{{ most_recent_donation.name }}</p>        
                                      <div style="display: flex; flex-direction: row; gap: 1vw;">
-                                       <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+                                       <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
                                        <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Most Recent     </p>
                                     
                                       </div>
@@ -399,7 +399,7 @@
           <div style="display: flex; flex-direction: column; gap: 1.5vh;">
             <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none; color: #000000;"> <p style="margin: 0;">@{{ project.user.username }}</p></a>
                 <div style="display: flex; flex-direction: row; gap: 2vw;">
-              <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.amount}} </p>
+              <p style="margin: 0; font-weight: bold;">${{channel_owner_donation.donation_amount}} </p>
               <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">   Creator Contribution         </p>
                  </div>
           </div>
@@ -416,7 +416,7 @@
           <div style="display: flex; flex-direction: column; gap: 1.5vh;">
     <a href="{% url 'user_channel' username=highest_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ highest_donation.donor.username }}</p></a>        
                <div style="display: flex; flex-direction: row; gap: 2vw;">
-                 <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                 <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                  <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                </div>
           </div>
@@ -427,7 +427,7 @@
       <div style="display: flex; flex-direction: column; gap: 1.5vh;">
       <p style="margin: 0;">{{ highest_donation.name }}</p>     
                    <div style="display: flex; flex-direction: row; gap: 2vw;">
-                     <p style="margin: 0; font-weight: bold;">${{highest_donation.amount}}</p>
+                     <p style="margin: 0; font-weight: bold;">${{highest_donation.donation_amount}}</p>
                      <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end; ">   Top Contribution     </p>
                    </div>
               </div>
@@ -446,7 +446,7 @@
           <div style="display: flex; flex-direction: column; gap: 1.5vh;">
             <a href="{% url 'user_channel' username=most_recent_donation.donor.username %}" style="text-decoration: none; color: #000000;"><p style="margin: 0;">@{{ most_recent_donation.donor.username }}</p></a>
               <div style="display: flex; flex-direction: row; gap: 1vw;">
-              <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+              <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
               <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">  Most Recent  </p>
               </div>
           </div>
@@ -457,7 +457,7 @@
         <div style="display: flex; flex-direction: column; gap: 1.5vh;">
          <p style="margin: 0;">{{ most_recent_donation.name }}</p>
             <div style="display: flex; flex-direction: row; gap: 1vw;">
-            <p style="margin: 0; font-weight: bold;">${{most_recent_donation.amount}}</p>
+            <p style="margin: 0; font-weight: bold;">${{most_recent_donation.donation_amount}}</p>
             <p style="margin:0; color: gray; font-size: 0.8rem; align-self: flex-end;">  Most Recent  </p>
             </div>
         </div>
