--- a/members/templates/projects/update_detail.html
+++ b/members/templates/projects/update_detail.html
@@ -183,7 +183,7 @@
                             <p class="pforfundinggoal-phone">raised of ${{ project.funding_goal }} goal</p>
                             
                           </div>
-                          <p class="pforfundinggoal-phone" style="color: black; margin-top: 0.4em; margin-bottom: 0.6em;">{{project.donations.count}} people donated</p>
+                          <p class="pforfundinggoal-phone" style="color: black; margin-top: 0.4em; margin-bottom: 0.6em;">{{completed_donation_count}} people donated</p>
                         </div>
                 
                         <hr>
@@ -384,7 +384,7 @@
       <i class="fas fa-donate" style="margin-right: 5px;"></i> Donate </a>
       </button>
       <div class="donation-info">
-      <p class="donation-text">{{project.donations.count}} people donated</p>
+      <p class="donation-text">{{completed_donation_count}} people donated</p>
       </div>
   
         </div>
