--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +9,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet", href="{% static 'loginstyle.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 <body>
+  {% if messages %}
+  {% for message in messages %}
+  <div class="form-errors">
+    <div style="display: flex; flex-direction: row; gap: 10px; align-items: center; margin-left: 1%;">
+    <i class="fas fa-exclamation-circle fa-lg"></i>
+    <p class="error-message">{{ message }}</p>
+    </div>
+  </div>
+  {% endfor %}
+{% endif %}
 <div class="rip">
-<div class = "kokoro">
-                
+
+  <div class = "kokoro">
+
+
         <a href="{% url 'home' %}"><img src="{% static 'Our-TubeLogo.svg'%}" class="logo"></a>
         
         <h1></h1>
