--- a/members/templates/donation/donation_landing_page.html
+++ b/members/templates/donation/donation_landing_page.html
@@ -130,10 +130,16 @@ input.donation-box::-webkit-outer-spin-button {
 <div class="kodakblack">
     <div class="container">
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <p style="font-family: 'Lato', sans-serif;">  You're supporting <strong>@{{project.user}}</strong> in</p>
+          {% if project.user.profile.cropped_image_data %}
+          <img src="{{project.user.profile.cropped_image_data.url}}" style="width: 80px; height: 80px; border-radius: 50%;">
+          {% else %}
+          <img src="{% static 'profilepic.png' %}" style="width: 50px; height: 50px; border-radius: 50%;">
+          {% endif %}
+          <p style="font-family: 'Lato', sans-serif; text-align: center;">  You're supporting <strong>@{{project.user}}</strong> in</p>
            
-          <p style="font-family: 'Lato', sans-serif; text-align: center;"> <strong>{{project.project_title}}</strong></p>
-
+          <p style="font-family: 'Lato', sans-serif; text-align: center; margin-top: 0;"> <strong>{{project.project_title}}</strong></p>
+          <hr style="width: 100%;">
+          <p></p>
             <img src="{{project.project_thumbnail.url}}" class="thumbnail">
 
             
